# P-001-OpenGLObstacleDogder

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  P-001-OpenGLObstacleDogder.vcxproj  P-001-OpenGLObstacleDogder.vcxproj.filters  P001-Basic-OpenGL-Cpp.slnx  RELEASE_NOTES.md  Readme.md  SECURITY.md
libraries/include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: AudioManager.cpp  AudioManager.h  TextRenderer.cpp  TextRenderer.h  generate_sounds.py  glad.c  main.cpp
